--- a/GetStarted/JSX/example1.html
+++ b/GetStarted/JSX/example1.html
@@ -7,11 +7,17 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js" integrity="sha512-kp7YHLxuJDJcOzStgd6vtpxr4ZU9kjn77e6dBsivSz+pUuAuMlE2UTdKB7jjsWT84qbS8kdCWHPETnP/ctrFsA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
     <title>JSX-Example 1</title>
 </head>
 <body>
-    <script>
-        const element = <h1>Hello, World!</h1>;
+    <div id="demo"></div>
+    <script type="text/babel">
+        
+        const element = <p>Hello, World!</p>;
+        ReactDOM.render(element, document.getElementById("demo"));
+
     </script>
 </body>
 </html>
