--- a/IntroToJSX/JSXisAnExpression.html
+++ b/IntroToJSX/JSXisAnExpression.html
@@ -17,8 +17,8 @@
 
         const  user = {
            
-            firstName: "",
-            lastName: ""
+            firstName: "Reda",
+            lastName: "hammada"
         };
 
 
