styling react elements

--- a/IntroToJSX/childrenJSX.html
+++ b/IntroToJSX/childrenJSX.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js" integrity="sha512-kp7YHLxuJDJcOzStgd6vtpxr4ZU9kjn77e6dBsivSz+pUuAuMlE2UTdKB7jjsWT84qbS8kdCWHPETnP/ctrFsA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Document</title>
 </head>
@@ -17,8 +18,8 @@
 
             const container = (
                 <div>
-                    <h1>Hello!</h1>
-                    <h2>Have a good day</h2>
+                    <h1 className = "heading">Hello!</h1>
+                    <h2 className="heading2">Have a good day</h2>
                 </div>
             );
 
