--- a/IntroToJSX/inlineStyling.html
+++ b/IntroToJSX/inlineStyling.html
@@ -21,10 +21,22 @@
                 fontSize: "30px"
             }
 
+            const list = {
+
+                listStyleType:"none",
+                fontSize:"20px"
+                
+            }
+
             ReactDOM.render(
 
                 <div>
-                    <p style={costumStyle}>Inline Style</p>
+                    <p style={costumStyle}>Inline Style</p>\
+                    <ul style={list}>
+                        <li>First Item</li>
+                        <li>Second Item</li>
+                        <li>Third Item</li>
+                    </ul>
                 </div>
                 ,document.getElementById('demo')
 
