add merge solved

--- a/render/render.html
+++ b/render/render.html
@@ -24,7 +24,7 @@
         function tick(){
          const element = ( <div>
                 <h1>Hello World</h1>
-                <p>It's {new Date().toLocaleDateString()} </p>
+                <p>It's {new Date().toLocaleTimeString()} </p>
             </div> )
 
             root.render(element);
